# DataLens

./: .gitignore  .replit  README.md  extensions.py  main.py  models.py  preview_dataset.py  pyproject.toml  replit.md  requirements.txt  schema.py  utils.py
Backend/: query_router.py
FrontEnd/: index.html  package-lock.json  package.json  readme.md
FrontEnd/src/: App.tsx  index.css
FrontEnd/src/components/: DataContext.tsx  Header.tsx  SQLBuilder.tsx  Sidebar.tsx  WebBuilder.tsx
FrontEnd/src/components/sql-builder/: AIAssistant.tsx  ConnectedSources.tsx  DataImport.tsx  ResultsDisplay.tsx  SQLContext.tsx  SQLEditor.tsx  SavedQueries.tsx
FrontEnd/src/components/ui/: card.tsx  sheet.tsx
FrontEnd/src/components/web-builder/: ChartConfigPanel.tsx  ChartLibrary.tsx  ChartRenderer.tsx  ColumnsPanel.tsx  DashboardBuilder.tsx  ExportShare.tsx  FilterPanel.tsx  ResizableChart.tsx
FrontEnd/src/services/: api.ts
FrontEnd/src/styles/: globals.css
code/: readme.md
routers/: .env.example  analysis_router.py  charts_router.py  dashboard_router.py  data_router.py  query_router.py  upload_schema.py
uploads/: Project-Management-Sample-DataProject_Management_Data.csv
web/: readme.md
