[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "marshmallow>=4.0.1",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "uvicorn>=0.36.0",
]
